# exchange_mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.json  docker-compose.yml
docs/superpowers/plans/: 2026-03-27-attachment-download-url.md  2026-03-27-download-attachments.md
docs/superpowers/specs/: 2026-03-27-attachment-download-url-design.md  2026-03-27-download-attachments-design.md
src/: attachment_store.rs  auth.rs  cache.rs  config.rs  crypto.rs  imap_client.rs  login.rs  main.rs  middleware.rs  oauth.rs  oauth2_server.rs  oauth2_store.rs  server.rs  session.rs
src/ews/: client.rs  mod.rs  xml.rs
src/imap/: calendar.rs  client.rs  mod.rs  parse.rs
src/oauth/: endpoints.rs  mod.rs  store.rs
src/ui_resources/: email_preview.html  inbox_list.html
