[package]
name = "exchange-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for IMAP email access with Microsoft Exchange OAuth2 authentication"

[dependencies]
# MCP SDK
rmcp = { version = "1.2", features = ["server", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# IMAP (sync, used via spawn_blocking)
imap = "2"
imap-proto = "0.10"
native-tls = "0.2"

# OAuth2
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Email parsing
mailparse = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server (for streamable HTTP transport)
axum = "0.8"

# Utils
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
http = "1"
