[package]
name = "exchange-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for IMAP email access with OAuth 2.1 multi-user authentication"

[dependencies]
# MCP SDK
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# IMAP (sync, used via spawn_blocking)
imap = "2"
imap-proto = "0.10"
native-tls = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Email parsing
mailparse = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server
axum = "0.8"
tower = "0.5"
http = "1"
http-body-util = "0.1"
bytes = "1"

# OAuth 2.1 server
sha2 = "0.10"
rusqlite = { version = "0.34", features = ["bundled"] }
rand = "0.9"
url = "2"

# Credential encryption
aes-gcm = "0.10"

# Security
subtle = "2.6"
zeroize = { version = "1", features = ["derive"] }

# Charset conversion (RFC 2047)
encoding_rs = "0.8"

# SMTP (email sending)
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }

# EWS (Exchange Web Services) for calendar
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "cookies"] }
quick-xml = { version = "0.37", features = ["serialize"] }
ntlmclient = "0.2"

# Utils
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2.3.2"

[dev-dependencies]
tempfile = "3"
